--- a/app/src/main/res/layout/activity_fullscreen.xml
+++ b/app/src/main/res/layout/activity_fullscreen.xml
@@ -34,13 +34,16 @@
         android:columnCount="8"
         android:layout_below="@+id/title_bar">
 
-        <ImageButton
+        <Button
+            android:text="Missing"
+            android:textColor="#000000"
+            android:layout_marginTop="32sp"
+            android:drawablePadding="-15sp"
             android:layout_width="150px"
             android:layout_height="150px"
             android:id="@+id/patternButton"
             android:clickable="true"
-            android:background="@android:color/transparent"
-            android:src="@drawable/patterns"
+            android:background="@drawable/patterns"
             android:layout_marginLeft="30dp" />
 
     </GridLayout>
