--- a/app/src/main/res/layout/activity_fullscreen.xml
+++ b/app/src/main/res/layout/activity_fullscreen.xml
@@ -8,43 +8,92 @@
     android:columnCount="2"
     android:rowCount="2"
     android:orientation="vertical"
+    android:padding="7dp"
     >
 
 
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Adventures Of Little Morris"
-        android:id="@+id/title_bar"
+        android:textColor="#cffff43d"
         android:textSize="43sp"
-        android:fontFamily="serif"
         android:textStyle="bold"
-        android:gravity="center"
-        android:layout_toRightOf="@+id/home_button"
-        android:layout_toEndOf="@+id/home_button"
-        android:textColor="#FFFFCC00"
-        android:typeface="monospace" />
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Welcome To Little Bits"
+        android:id="@+id/middleView"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 
-
-    <GridLayout
-        android:id="@+id/buttons"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:columnCount="8"
-        android:layout_below="@+id/title_bar">
+    <RelativeLayout
+        android:layout_width="200dp"
+        android:layout_height="100dp"
+        android:background="@drawable/rounded_button"
+        android:id="@+id/leftside"
+        android:layout_below="@+id/middleView"
+        android:layout_alignLeft="@+id/middleView"
+        android:layout_alignStart="@+id/middleView">
 
         <Button
-            android:text="Missing"
+            android:layout_marginLeft="10dp"
+            android:layout_width="50dp"
+            android:layout_height="70dp"
             android:textColor="#000000"
-            android:layout_marginTop="32sp"
-            android:drawablePadding="-15sp"
-            android:layout_width="150px"
-            android:layout_height="150px"
-            android:id="@+id/patternButton"
-            android:clickable="true"
-            android:background="@drawable/patterns"
-            android:layout_marginLeft="30dp" />
+            android:background="@drawable/kaley_button"
+            android:id="@+id/kindyButton"
+            android:layout_centerVertical="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+        <Button
+            android:layout_marginRight="10dp"
+            android:textSize="25sp"
+            android:textStyle="bold"
+            android:layout_width="180dp"
+            android:layout_height="fill_parent"
+            android:textColor="#FF000000"
+            android:text="VISIT MISS KALEY"
+            android:id="@+id/miss_kaley_button"
+            android:background="#00000000"
+            android:layout_toRightOf="@+id/kindyButton"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true" />
+    </RelativeLayout>
 
-    </GridLayout>
+
+
+    <RelativeLayout
+        android:id="@+id/rightside"
+        android:layout_width="200dp"
+        android:layout_height="100dp"
+        android:background="@drawable/rounded_button"
+        android:layout_alignTop="@+id/leftside"
+        android:layout_alignRight="@+id/middleView"
+        android:layout_alignEnd="@+id/middleView">
+       <Button
+           android:layout_marginLeft="10dp"
+           android:layout_width="50dp"
+           android:layout_height="70dp"
+           android:textColor="#000000"
+           android:background="@drawable/simon_button"
+           android:id="@+id/kindyButton2"
+           android:layout_centerVertical="true"
+           android:layout_alignParentLeft="true"
+           android:layout_alignParentStart="true" />
+
+        <Button
+            android:layout_marginRight="10dp"
+            android:textSize="25sp"
+            android:textStyle="bold"
+            android:layout_width="180dp"
+            android:layout_height="fill_parent"
+            android:textColor="#FF000000"
+            android:text="VISIT MR SIMON"
+            android:id="@+id/mr_simon_button"
+            android:background="#00000000"
+            android:layout_alignParentTop="true"
+            android:layout_toRightOf="@+id/kindyButton2"
+            android:layout_toEndOf="@+id/kindyButton2" />
+    </RelativeLayout>
+
+
+
 </RelativeLayout>
