--- a/app/src/main/res/drawable/rounded_button.xml
+++ b/app/src/main/res/drawable/rounded_button.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle" >
+    android:shape="rectangle"
+    >
 
     <corners
         android:bottomLeftRadius="10dp"
         android:bottomRightRadius="10dp"
         android:radius="10.1dp"
         android:topLeftRadius="10dp"
-        android:topRightRadius="10dp" />
+        android:topRightRadius="10dp"/>
 
-    <solid android:color="#77FFFFFF" />
+    <solid android:color="#77c2d2ff" />
 
     <stroke
         android:width="7dp"
