--- a/app/src/main/res/layout/activity_fullscreen.xml
+++ b/app/src/main/res/layout/activity_fullscreen.xml
@@ -1,99 +1,59 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/gradiant1_background"
+    android:scaleType="fitXY"
     tools:context=".FullscreenActivity"
     android:id="@+id/full_screen"
     android:screenOrientation="landscape"
-    android:columnCount="2"
-    android:rowCount="2"
-    android:orientation="vertical"
-    android:padding="7dp"
-    >
+    android:background="@drawable/start_screen_background">
 
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="#cffff43d"
-        android:textSize="43sp"
-        android:textStyle="bold"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Welcome To Little Bits"
-        android:id="@+id/middleView"
+    <Button
+        android:layout_width="70dp"
+        android:layout_height="50dp"
+        android:text="PARENT"
+        android:textColor="#ff000000"
+        android:id="@+id/parent_button"
+        android:background="#40FFFFFF"
+        android:clickable="true"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:enabled="true"
+        android:gravity="center_vertical|center_horizontal" />
 
-    <RelativeLayout
+    <Button
         android:layout_width="200dp"
-        android:layout_height="100dp"
-        android:background="@drawable/rounded_button"
-        android:id="@+id/leftside"
-        android:layout_below="@+id/middleView"
-        android:layout_alignLeft="@+id/middleView"
-        android:layout_alignStart="@+id/middleView">
-
-        <Button
-            android:layout_marginLeft="10dp"
-            android:layout_width="50dp"
-            android:layout_height="70dp"
-            android:textColor="#000000"
-            android:background="@drawable/kaley_button"
-            android:id="@+id/kindyButton"
-            android:layout_centerVertical="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
-        <Button
-            android:layout_marginRight="10dp"
-            android:textSize="25sp"
-            android:textStyle="bold"
-            android:layout_width="180dp"
-            android:layout_height="fill_parent"
-            android:textColor="#FF000000"
-            android:text="VISIT MISS KALEY"
-            android:id="@+id/miss_kaley_button"
-            android:background="#00000000"
-            android:layout_toRightOf="@+id/kindyButton"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true" />
-    </RelativeLayout>
+        android:layout_height="fill_parent"
+        android:textColor="#000000"
+        android:background="#00000000"
+        android:id="@+id/kindyButton2"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
 
 
-    <RelativeLayout
-        android:id="@+id/rightside"
-        android:layout_width="200dp"
-        android:layout_height="100dp"
-        android:background="@drawable/rounded_button"
-        android:layout_alignTop="@+id/leftside"
-        android:layout_alignRight="@+id/middleView"
-        android:layout_alignEnd="@+id/middleView">
-       <Button
-           android:layout_marginLeft="10dp"
-           android:layout_width="50dp"
-           android:layout_height="70dp"
-           android:textColor="#000000"
-           android:background="@drawable/simon_button"
-           android:id="@+id/kindyButton2"
-           android:layout_centerVertical="true"
-           android:layout_alignParentLeft="true"
-           android:layout_alignParentStart="true" />
+    <ImageView
+        android:visibility="invisible"
+        android:layout_marginLeft="50dp"
+        android:layout_width="60dp"
+        android:layout_height="80dp"
+        android:id="@+id/play_star"
+        android:background="@drawable/play_star"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
-        <Button
-            android:layout_marginRight="10dp"
-            android:textSize="25sp"
-            android:textStyle="bold"
-            android:layout_width="180dp"
-            android:layout_height="fill_parent"
-            android:textColor="#FF000000"
-            android:text="VISIT MR SIMON"
-            android:id="@+id/mr_simon_button"
-            android:background="#00000000"
-            android:layout_alignParentTop="true"
-            android:layout_toRightOf="@+id/kindyButton2"
-            android:layout_toEndOf="@+id/kindyButton2" />
-    </RelativeLayout>
-
+    <ImageView
+        android:visibility="invisible"
+        android:layout_width="150dp"
+        android:layout_height="60dp"
+        android:id="@+id/yellow_arrow"
+        android:background="@drawable/yellow_arrow"
+        android:layout_alignParentBottom="true"
+        android:layout_toLeftOf="@+id/play_star"
+        android:layout_toStartOf="@+id/play_star"
+        android:layout_marginBottom="10dp" />
 
 
 </RelativeLayout>
